--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,8 +5,8 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 50px;
-    padding-right: 100px;
-    padding-left: 100px;
+    padding-right: 50px;
+    padding-left: 50px;
 }
 
 .header h1{
@@ -25,8 +25,15 @@
     border-radius: 100%;
 }
 
+
+
 .container hr{
-    width: 800px;
-    margin: 0px 32px 0px 100px;
+    width: 100%;
+    margin-top: 50px;
+    margin-left: 50px;
     border: 1px solid rgba(17,17,17,0.15);
+}
+
+.container{
+    margin-bottom: 30px;
 }
