--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header{
-   min-width: 100%;
+    min-width: 100%;
     height: 64px;
     display: flex;
     justify-content: space-between;
@@ -41,11 +41,23 @@
 
 
 @media screen and (max-width:576px){
+    .container{
+        width: 100%;
+        margin: 0;
+    }
     .header{
-        width: 500px;
+        width: 550px;
+        margin: 0;
+        
     }
     .container hr{
-        width: 460px;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .header img{
+        margin-left: 40px;
+       
     }
 } 
     
